feat : gear 검색 및 자동완성 방식을 좌측고정 like로 변경 기존의 fulltext 방식에서 수정. 추후 fulltext를 보조 방식으로 재도입 하는 것을 고려 예정(다른 기능부터 선구현)